Significant progress Missile firing/handlilng is wired up and fixed a big layout bug.

--- a/pewpew/website/Style.css
+++ b/pewpew/website/Style.css
@@ -2,9 +2,6 @@
 }
 
 #Gamefield {
-    height: 400px;
-    width: 600px;
     border-style: solid;
     border-width: 2px;
-    /*background-color: white;*/
 }
